--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eleventy-blog-mnml",
   "version": "1.0.0",
-  "description": "A Blog Template using eleventy and terminal css.",
+  "description": "Simple Blog",
   "scripts": {
     "build": "eleventy && npm run sass",
     "serve": "concurrently 'eleventy --serve' 'npm run sass:watch'",
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Arpit Batra (arpitbatra123@gmail.com)",
+  "author": "Kirill Shapoval",
   "license": "MIT",
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
